feat: initiate payment
