# src/main/java/app/hackoholics/api/endpoint/controller/PaymentController.java
@@ -1,26 +1,41 @@
 package app.hackoholics.api.endpoint.controller;
 
-import app.hackoholics.api.endpoint.mapper.PaymentMethodRestMapper;
+import app.hackoholics.api.endpoint.mapper.PaymentRestMapper;
 import app.hackoholics.api.endpoint.rest.model.PaymentMethod;
+import app.hackoholics.api.endpoint.validator.PaymentMethodValidator;
 import app.hackoholics.api.service.PaymentService;
-import com.stripe.exception.StripeException;
+import java.util.List;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PutMapping;
+import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 @AllArgsConstructor
 @Slf4j
 public class PaymentController {
-  private final PaymentMethodRestMapper paymentMethodRestMapper;
   private final PaymentService service;
+  private final PaymentRestMapper mapper;
+  private final PaymentMethodValidator paymentMethodValidator;
+
+  @GetMapping("/users/{uId}/paymentMethods")
+  public List<PaymentMethod> getPaymentMethods(@PathVariable("uId") String userId) {
+    return service.getPaymentMethods(userId).stream().map(mapper::toRest).toList();
+  }
+
+  @PutMapping("/users/{uId}/paymentMethods")
+  public PaymentMethod crupdatePaymentMethod(
+      @PathVariable("uId") String userId, @RequestBody PaymentMethod paymentMethod) {
+    var toSave = mapper.toDomain(paymentMethod);
+    return mapper.toRest(service.crupdate(toSave));
+  }
 
   @GetMapping("/users/{uId}/paymentMethods/{pmId}")
-  public PaymentMethod getPaymentMethod(
-      @PathVariable("uId") String userId,
-      @PathVariable("pmId") String paymentMethodId) {
-    return null;
+  public PaymentMethod crupdatePaymentMethod(
+      @PathVariable("uId") String userId, @PathVariable("pmId") String pmId) {
+    return mapper.toRest(service.getPaymentMethod(pmId));
   }
 }
